@C code cleanup - keine Booleans instanziieren